--- a/MyGameStoreApp/Views/layout.html
+++ b/MyGameStoreApp/Views/layout.html
@@ -39,12 +39,12 @@
                 </ul>
                 <ul class="navbar-nav" style="display: {{{adminDisplay}}}">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="http://example.com" id="AdminDropdownMenuLink"
+                        <a class="nav-link dropdown-toggle" href="/admin/add" id="AdminDropdownMenuLink"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Games</a>
+                            <a class="dropdown-item" href="/admin/all">Games</a>
                         </div>
                     </li>
 
@@ -57,7 +57,7 @@
         </div>
     </nav>
 </header>
-</br>
+<br/>
     <div class="row  text-center">
         <div class="col-md-4  "></div>
             <div class="col-md-4">
