--- a/MyGameStoreApp/Views/Admin/all.html
+++ b/MyGameStoreApp/Views/Admin/all.html
@@ -1,7 +1,7 @@
 ﻿<main>
     <div class="container">
         <div class="row">
-            <h2 class="m-1">All Games &ndash;&nbsp;</h2> <a href=" admin/addgame " class="btn btn-success m-1"><strong>+</strong> Add
+            <h2 class="m-1">All Games &ndash;&nbsp;</h2> <a href="/admin/add " class="btn btn-success m-1"><strong>+</strong> Add
                 Game</a>
             <table class="table table-striped table-hover">
                 <thead>
